--- a/ldapadmin/src/main/webapp/WEB-INF/web.xml
+++ b/ldapadmin/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,7 @@
         <url-pattern>/account/css/*</url-pattern>
         <url-pattern>/account/fonts/*</url-pattern>
         <url-pattern>/account/js/*</url-pattern>
+        <url-pattern>/console/*</url-pattern>
     </servlet-mapping>
 
     <session-config>
