--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -15,9 +15,11 @@
   "devDependencies": {
     "angular": "1.5.0-rc.0",
     "angular-chosen": "1.0.8",
+    "angular-flash-alert": "^1.1.1",
     "angular-new-router": "0.5.3",
     "angular-resource": "1.5.0-rc.0",
     "angular-templates-brunch-next": "0.0.7",
+    "angular-translate": "^2.9.0",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
     "chosen-npm": "1.4.2",
