--- a/extractorapp/pom.xml
+++ b/extractorapp/pom.xml
@@ -87,6 +87,12 @@
       <artifactId>json</artifactId>
       <version>20080701</version>
     </dependency>
+    <!-- metrics  -->
+    <dependency>
+    <groupId>com.ryantenney.metrics</groupId>
+    <artifactId>metrics-spring</artifactId>
+    <version>3.1.3</version>
+</dependency>
     <!-- geotools -->
     <dependency>
       <groupId>org.geotools</groupId>
