--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -31,5 +31,8 @@
     "javascript-brunch": "1.8.0",
     "jquery": "^2.2.0",
     "sass-brunch": "1.9.2"
+  },
+  "scripts": {
+      "postinstall": "./node_modules/.bin/brunch build"
   }
 }
