--- a/extractorapp/pom.xml
+++ b/extractorapp/pom.xml
@@ -289,10 +289,15 @@
       <groupId>org.georchestra</groupId>
       <artifactId>georchestra-commons</artifactId>
       <version>${project.version}</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>extractorapp</finalName>
+      </dependency>
+      <dependency>
+      <groupId>com.ryantenney.metrics</groupId>
+      <artifactId>metrics-spring</artifactId>
+      <version>3.1.3</version>
+      </dependency>
+      </dependencies>
+      <build>
+      <finalName>extractorapp</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
