--- a/extractorapp/pom.xml
+++ b/extractorapp/pom.xml
@@ -12,7 +12,7 @@
   <url>http://www.georchestra.org</url>
   <properties>
     <maven.test.skip>false</maven.test.skip>
-    <spring.version>3.1.0.RELEASE</spring.version>
+    <spring.version>4.1.6.RELEASE</spring.version>
   </properties>
   <dependencies>
     <dependency>
@@ -54,6 +54,11 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+    <groupId>cglib</groupId>
+    <artifactId>cglib</artifactId>
+    <version>2.2.2</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -299,6 +304,16 @@
       <artifactId>georchestra-commons</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+     <groupId>com.ryantenney.metrics</groupId>
+     <artifactId>metrics-spring</artifactId>
+     <version>3.1.3</version>
+    </dependency>
+<dependency>
+    <groupId>io.dropwizard.metrics</groupId>
+    <artifactId>metrics-graphite</artifactId>
+    <version>3.1.2</version>
+</dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}-${server}</finalName>
