--- a/extractorapp/pom.xml
+++ b/extractorapp/pom.xml
@@ -308,6 +308,11 @@
      <artifactId>metrics-spring</artifactId>
      <version>3.1.3</version>
     </dependency>
+    <dependency>
+	<groupId>io.dropwizard.metrics</groupId>
+	<artifactId>metrics-jvm</artifactId>
+	<version>3.1.2</version>
+</dependency>
 <dependency>
     <groupId>io.dropwizard.metrics</groupId>
     <artifactId>metrics-graphite</artifactId>
